Closed Bug 361499 Opened 18 years ago Closed 18 years ago

crash at [@ imgRequest::OnStopRequest]

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: dougt)

References

(Blocks 1 open bug, )

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

everytime I go to: http://wc-lhd-afkalf.vet.uu.nl/view/view.shtml I crash but the Talkback doesn't for some reason get the crash Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061121 Minefield/3.0a1 ID:2006112105 [cairo]
Summary: crash without Talkback → crash without imgRequest::OnStopRequest 55730eb
TB26346141E imgRequest::OnStopRequest [mozilla\modules\libpr0n\src\imgrequest.cpp, line 744] nsMultiMixedConv::SendStop [mozilla\netwerk\streamconv\converters\nsmultimixedconv.cpp, line 797] nsMultiMixedConv::OnDataAvailable [mozilla\netwerk\streamconv\converters\nsmultimixedconv.cpp, line 561] ProxyListener::OnDataAvailable [mozilla\modules\libpr0n\src\imgloader.cpp, line 878] nsStreamListenerTee::OnDataAvailable [mozilla\netwerk\base\src\nsstreamlistenertee.cpp, line 97] nsHttpChannel::OnDataAvailable [mozilla\netwerk\protocol\http\src\nshttpchannel.cpp, line 4116] nsInputStreamPump::OnStateTransfer [mozilla\netwerk\base\src\nsinputstreampump.cpp, line 503] nsInputStreamPump::OnInputStreamReady [mozilla\netwerk\base\src\nsinputstreampump.cpp, line 394] nsInputStreamReadyEvent::Run [mozilla\xpcom\io\nsstreamutils.cpp, line 112] NS_ProcessNextEvent_P [mozilla\xpcom\build\nsthreadutils.cpp, line 225] nsBaseAppShell::Run [mozilla\widget\src\xpwidgets\nsbaseappshell.cpp, line 153]
Keywords: crash
Summary: crash without imgRequest::OnStopRequest 55730eb → crash at @imgRequest::OnStopRequest
Component: General → ImageLib
Product: Firefox → Core
Version: unspecified → Trunk
QA Contact: general → imagelib
yeah, my regression. looks like a race and mRequest is nulled before we get to line 744. stuart, is |Init| ever called with a null nsIRequest or are imgRequest object reused?
Assignee: nobody → dougt
this might work.
Doug, were you going to request review for the band-aid or are you still exploring other options? FWIW, it looks OK to me.
Summary: crash at @imgRequest::OnStopRequest → crash at [@ imgRequest::OnStopRequest]
Attachment #246321 - Flags: review?(pavlov)
This is the #3 topcrash for Gran Paradio and #9 on trunk. Can we get some movement on this?
Flags: blocking1.9?
Keywords: topcrash
Trying band aide: Checking in imgRequest.cpp; /cvsroot/mozilla/modules/libpr0n/src/imgRequest.cpp,v <-- imgRequest.cpp new revision: 1.92; previous revision: 1.91
No crashes on trunk since 2006-12-08. Looks like the band-aid did the trick. ->FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: blocking1.9?
Resolution: --- → FIXED
Comment on attachment 246321 [details] [diff] [review] possible bandaide. Removing review request. Patch was checked in six months ago.
Attachment #246321 - Flags: review?(pavlov)
Crash Signature: [@ imgRequest::OnStopRequest]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: