Trying bandaide for crash at [@ imgRequest::OnStopRequest].  see bug 361499.